# frogify

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  build.sh  configure.sh  readme.md
modules/mrta_utils/Source/GUI/: GenericParameterEditor.cpp  ParameterComponents.h
src/: LevelDetector.cpp  LevelDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Utils.cpp  Utils.h
